# bitpanda-test-assignment

./: .bazelrc  .gitignore  .swiftlint.yml  MODULE.bazel  Makefile  README.md  bitpanda-test.swiftformat  swiftlint.yml
BitPanda/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
BitPanda.xcodeproj/: project.pbxproj
BitPanda.xcodeproj/xcshareddata/xcschemes/: BitPanda.xcscheme
BitPanda/AppStart/: AppCoordinator.swift  AppDelegate.swift
BitPanda/Assets/: AssetViewController.swift  AssetsCoordinator.swift  AssetsFactory.swift  AssetsViewModel.swift
BitPanda/Assets/Views/: AssetRowCell.swift  AssetsView.swift
BitPanda/Dependency/: DependencyContainer.swift
BitPanda/Resources/Base.lproj/: LaunchScreen.storyboard
BitPanda/Resources/de.lproj/: Localizable.strings
BitPanda/Resources/en.lproj/: Localizable.strings
BitPanda/Wallets/: WalletsCoordinator.swift  WalletsFactory.swift  WalletsViewController.swift
BitPandaTests/: BitPandaTests.swift
BitPandaUITests/: BitPandaUITests.swift  BitPandaUITestsLaunchTests.swift
Modules/AssetsFeature/: Package.swift  README.md
Modules/BitPandaCore/: Package.swift  README.md
Modules/BitPandaUI/: Package.swift  README.md
Modules/WalletsFeature/: Package.swift  README.md
apps/ios-bitpanda/: BUILD  Info.plist
apps/ios-bitpanda/Tests/: RootInteractorTests.swift  RootRouterTests.swift
features/bitpanda-assets/: BUILD
features/bitpanda-assets/Sources/: AssetsViewController.swift  (+1 more)
features/bitpanda-core/: BUILD  Info.plist
features/bitpanda-ui/: BUILD
features/bitpanda-wallets/: BUILD
(+284 files in other folders)
